--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,10 +16,10 @@ data:
     max_open_conns: 100
     conn_max_lifetime: 5
   redis:
-    addr: 127.0.0.1:6379
+    addr: 49.235.138.110:6379
     read_timeout: 1
     write_timeout: 1
-    password: ""
+    password: redis_hJPNXn
     db: 0
     pool_size: 50
     min_idle_conns: 10
